[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Ring2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Ring1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Target.png" type="Texture" id=3]
[ext_resource path="res://Target.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Hit.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=3]
resource_name = "Drop"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Target" type="Area2D"]
script = ExtResource( 4 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Drop = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Ring1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Ring2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Col" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -50.0

[connection signal="body_entered" from="." to="." method="_on_Target_body_entered"]
